WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
261804
Fix keyboard selection of RenderListBox in vertical writing mode
https://bugs.webkit.org/show_bug.cgi?id=261804
Summary
Fix keyboard selection of RenderListBox in vertical writing mode
Aditya Keerthi
Reported
2023-09-19 22:46:36 PDT
SSIA
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2023-09-19 22:47:19 PDT
<
rdar://problem/115766451
>
Aditya Keerthi
Comment 2
2023-10-04 23:06:42 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/18674
Aditya Keerthi
Comment 3
2023-10-04 23:08:33 PDT
Submitted web-platform-tests pull request:
https://github.com/web-platform-tests/wpt/pull/42355
EWS
Comment 4
2023-10-05 10:49:45 PDT
Committed
268926@main
(8b80fb7e578a): <
https://commits.webkit.org/268926@main
> Reviewed commits have been landed. Closing PR #18674 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug