Fix keyboard selection of RenderListBox in vertical writing mode https://bugs.webkit.org/show_bug.cgi?id=261804 rdar://115766451

Reviewed by Wenson Hsieh.

In horizontal writing mode, the down and up arrow keys can be used to select the
next and previous option respectively. Adjust the arrow keys used for vertical
writing mode.

The added test will pass once <select> is enabled under the vertical form controls feature.

* LayoutTests/imported/w3c/web-platform-tests/css/css-writing-modes/forms/select-multiple-keyboard-selection.optional-expected.txt: Added.
* LayoutTests/imported/w3c/web-platform-tests/css/css-writing-modes/forms/select-multiple-keyboard-selection.optional.html: Added.
* LayoutTests/platform/ios/TestExpectations:

`RenderListBox` is not used on iOS.

* Source/WebCore/html/HTMLSelectElement.cpp:
(WebCore::HTMLSelectElement::listBoxDefaultEventHandler):

`vertical-lr`: Right and left arrow keys can be used for next and previous respectively.
`vertical-rl`: Left and right arrow keys can be used for next and previous respectively.
Canonical link: https://commits.webkit.org/268926@main